--- a/.github/workflows/sims_integrated.yml
+++ b/.github/workflows/sims_integrated.yml
@@ -54,23 +54,25 @@ jobs:
               if [[ "$kv" == *"="* ]]; then
                 k="$(echo "${kv%%=*}" | tr '[:lower:]' '[:upper:]' | tr -c 'A-Z0-9_' '_' | xargs)"
                 v="$(echo "${kv#*=}" | xargs)"
-                echo "$prefix$k=$v" >> $GITHUB_OUTPUT
+                echo "$prefix$k=$v" >> "$GITHUB_OUTPUT"
               fi
             done
           }
-          echo "F_REQUIRE_ODDS=false" >> $GITHUB_OUTPUT
-          echo "F_MIN_EV=0"          >> $GITHUB_OUTPUT
-          echo "F_ODDS_BANDS="       >> $GITHUB_OUTPUT
-          echo "F_ODDS_MIN=0"        >> $GITHUB_OUTPUT
-          echo "F_ODDS_MAX=0"        >> $GITHUB_OUTPUT
-          echo "F_EXCLUDE_FIRST1=false" >> $GITHUB_OUTPUT
-          echo "F_ONLY_FIRST1=false"    >> $GITHUB_OUTPUT
-          echo "F_BUY_IN_TOP3=false"    >> $GITHUB_OUTPUT
-          echo "F_BUY_THR=0.7"          >> $GITHUB_OUTPUT
-          echo "K_ENABLE=true"   >> $GITHUB_OUTPUT
-          echo "K_THR=0.7"       >> $GITHUB_OUTPUT
-          echo "K_BOOST=0.15"    >> $GITHUB_OUTPUT
-          echo "K_AGGR=0.0"      >> $GITHUB_OUTPUT
+          # filter defaults
+          echo "F_REQUIRE_ODDS=false" >> "$GITHUB_OUTPUT"
+          echo "F_MIN_EV=0"          >> "$GITHUB_OUTPUT"
+          echo "F_ODDS_BANDS="       >> "$GITHUB_OUTPUT"
+          echo "F_ODDS_MIN=0"        >> "$GITHUB_OUTPUT"
+          echo "F_ODDS_MAX=0"        >> "$GITHUB_OUTPUT"
+          echo "F_EXCLUDE_FIRST1=false" >> "$GITHUB_OUTPUT"
+          echo "F_ONLY_FIRST1=false"    >> "$GITHUB_OUTPUT"
+          echo "F_BUY_IN_TOP3=false"    >> "$GITHUB_OUTPUT"
+          echo "F_BUY_THR=0.7"          >> "$GITHUB_OUTPUT"
+          # keyman defaults
+          echo "K_ENABLE=true"   >> "$GITHUB_OUTPUT"
+          echo "K_THR=0.7"       >> "$GITHUB_OUTPUT"
+          echo "K_BOOST=0.15"    >> "$GITHUB_OUTPUT"
+          echo "K_AGGR=0.0"      >> "$GITHUB_OUTPUT"
           [ -n "${FILTERS:-}" ] && parse_kvlist "$FILTERS" "F_"
           [ -n "${KEYMAN:-}" ]  && parse_kvlist "$KEYMAN"  "K_"
 
@@ -83,22 +85,26 @@ jobs:
           PID_TRIM="$(echo "${PID_IN:-}" | tr '[:space:]' ' ' | xargs)"
           if [ -z "$PID_TRIM" ] || [ "${PID_TRIM,,}" = "all" ]; then
             ALL=""
-            for i in $(seq -w 01 24); do ALL="${ALL}${i},"; done
+            for i in $(seq -w 01 24); do
+              ALL="${ALL}${i},"
+            done
             PID_EXP="${ALL%,}"
           else
             PID_NORM="$(echo "$PID_TRIM" | tr '、，;|' ',')"
             OUT=""
             IFS=',' read -r -a arr <<< "$PID_NORM"
             for p in "${arr[@]}"; do
-              p="$(echo "$p" | xargs)"; [ -z "$p" ] && continue
-              printf -v two "%02d" "$p"; OUT="${OUT}${two},"
+              p="$(echo "$p" | xargs)"
+              [ -z "$p" ] && continue
+              printf -v two "%02d" "$p"
+              OUT="${OUT}${two},"
             done
             PID_EXP="${OUT%,}"
           fi
           echo "PID_EXP=$PID_EXP" | tee -a "$GITHUB_OUTPUT"
           echo "[pidnorm] => $PID_EXP"
 
-      # 1) Pass1
+      # 1) Pass1: キーマン抽出（predict-only）
       - name: Run Pass1 (keyman only)
         env:
           DATE:  ${{ inputs.DATE }}
@@ -110,11 +116,15 @@ jobs:
           set -euo pipefail
           echo "[pass1] DATE=$DATE PID=$PID"
           python scripts/sims/sims.py \
-            --base public --dates "$DATE" --pids "$PID" \
-            --sims "$SIMS" --strategy trifecta_topN --topn "$TOPN" \
-            --predict-only --outdir "$OUTDIR"
+            --base public \
+            --dates "$DATE" \
+            --pids "$PID" \
+            --sims "$SIMS" \
+            --strategy trifecta_topN --topn "$TOPN" \
+            --predict-only \
+            --outdir "$OUTDIR"
 
-      # 2) TENKAI (per PID)
+      # 2) ML推論（TENKAI）— PIDごとに実行
       - name: Run TENKAI prediction
         env:
           DATE: ${{ inputs.DATE }}
@@ -122,10 +132,12 @@ jobs:
         run: |
           set -euo pipefail
           mkdir -p "TENKAI/predictions/v1/$DATE"
+          echo "[tenkai] $DATE / $PID_EXP"
           IFS=',' read -r -a PIDS <<< "$PID_EXP"
           for P in "${PIDS[@]}"; do
-            P="$(echo "$P" | xargs)"; [ -z "$P" ] && continue
-            echo "[tenkai] $DATE / $P"
+            P="$(echo "$P" | xargs)"
+            [ -z "$P" ] && continue
+            echo "  -> pid=$P"
             python TENKAI/tenkai_predict_integrated.py --date "$DATE" --pid "$P"
           done
 
@@ -133,7 +145,7 @@ jobs:
         run: |
           find TENKAI/predictions/v1/${{ inputs.DATE }} -maxdepth 4 -type f -name '*.csv' | sort || true
 
-      # 3) Pass2
+      # 3) Pass2: MLを読み込んだ統合SimS
       - name: Run Pass2 (SimS integrated with ML)
         env:
           DATE:  ${{ inputs.DATE }}
@@ -142,6 +154,7 @@ jobs:
           SIMS:  ${{ inputs.SIMS }}
           TOPN:  ${{ inputs.TOPN }}
           OUTDIR: ${{ inputs.OUTDIR }}
+          # parsed filters
           F_REQUIRE_ODDS:   ${{ steps.parse.outputs.F_REQUIRE_ODDS }}
           F_MIN_EV:         ${{ steps.parse.outputs.F_MIN_EV }}
           F_ODDS_BANDS:     ${{ steps.parse.outputs.F_ODDS_BANDS }}
@@ -151,19 +164,22 @@ jobs:
           F_ONLY_FIRST1:    ${{ steps.parse.outputs.F_ONLY_FIRST1 }}
           F_BUY_IN_TOP3:    ${{ steps.parse.outputs.F_BUY_IN_TOP3 }}
           F_BUY_THR:        ${{ steps.parse.outputs.F_BUY_THR }}
+          # parsed keyman
           K_ENABLE: ${{ steps.parse.outputs.K_ENABLE }}
           K_THR:    ${{ steps.parse.outputs.K_THR }}
           K_BOOST:  ${{ steps.parse.outputs.K_BOOST }}
           K_AGGR:   ${{ steps.parse.outputs.K_AGGR }}
         run: |
           set -euo pipefail
+          echo "[pass2] MODE=$MODE DATE=$DATE PID=$PID"
           if [[ "${K_ENABLE,,}" == "false" ]]; then
             K_THR=9.9; K_BOOST=0; K_AGGR=0
           fi
           ARGS_COMMON="--base public --dates $DATE --pids $PID \
             --sims $SIMS --topn $TOPN \
             --keyman-threshold $K_THR --keyman-boost $K_BOOST --keyman-aggr $K_AGGR \
-            --ml-root TENKAI/predictions/v1 --outdir $OUTDIR"
+            --ml-root TENKAI/predictions/v1 \
+            --outdir $OUTDIR"
           [[ "${F_EXCLUDE_FIRST1,,}" == "true" ]] && ARGS_COMMON="$ARGS_COMMON --exclude-first1"
           [[ "${F_ONLY_FIRST1,,}"    == "true" ]] && ARGS_COMMON="$ARGS_COMMON --only-first1"
           [[ "${F_BUY_IN_TOP3,,}"    == "true" ]] && ARGS_COMMON="$ARGS_COMMON --buy-if-keyman-in-top3 --buy-keyman-threshold $F_BUY_THR"
@@ -172,23 +188,25 @@ jobs:
           else
             ARGS_FILTER=""
             [[ -n "${F_ODDS_BANDS}" ]] && ARGS_FILTER="$ARGS_FILTER --odds-bands \"$F_ODDS_BANDS\""
-            [[ -n "${F_ODDS_MIN}" && "$F_ODDS_MIN" != "0" ]] && ARGS_FILTER="$ARGS_FILTER --odds-min $F_ODDS_MIN"
-            [[ -n "${F_ODDS_MAX}" && "$F_ODDS_MAX" != "0" ]] && ARGS_FILTER="$ARGS_FILTER --odds-max $F_ODDS_MAX"
+            [[ -n "${F_ODDS_MIN}"   && "$F_ODDS_MIN" != "0" ]] && ARGS_FILTER="$ARGS_FILTER --odds-min $F_ODDS_MIN"
+            [[ -n "${F_ODDS_MAX}"   && "$F_ODDS_MAX" != "0" ]] && ARGS_FILTER="$ARGS_FILTER --odds-max $F_ODDS_MAX"
             [[ "${F_REQUIRE_ODDS,,}" == "true" ]] && ARGS_FILTER="$ARGS_FILTER --require-odds"
             [[ -n "${F_MIN_EV}" && "$F_MIN_EV" != "0" ]] && ARGS_FILTER="$ARGS_FILTER --min-ev $F_MIN_EV"
             eval python scripts/sims/sims_integrated.py $ARGS_COMMON --odds-base public/odds/v1 $ARGS_FILTER
           fi
 
-      # 4) 集計（毎回強制上書き）
-      - name: Aggregate & write overall.json (force overwrite)
-        if: always()
+      # 4) eval のときだけ集計して overall.json を常に上書き（オプションも保存）
+      - name: Aggregate & write overall.json (eval only, overwrite)
+        if: ${{ inputs.MODE == 'eval' }}
         env:
           DATE:  ${{ inputs.DATE }}
           MODE:  ${{ inputs.MODE }}
           UNIT:  ${{ inputs.UNIT }}
-          OUTDIR: ${{ inputs.OUTDIR }}
           SIMS:  ${{ inputs.SIMS }}
           TOPN:  ${{ inputs.TOPN }}
+          PID:   ${{ steps.pidnorm.outputs.PID_EXP }}
+          OUTDIR: ${{ inputs.OUTDIR }}
+          # filters
           F_REQUIRE_ODDS:   ${{ steps.parse.outputs.F_REQUIRE_ODDS }}
           F_MIN_EV:         ${{ steps.parse.outputs.F_MIN_EV }}
           F_ODDS_BANDS:     ${{ steps.parse.outputs.F_ODDS_BANDS }}
@@ -198,125 +216,68 @@ jobs:
           F_ONLY_FIRST1:    ${{ steps.parse.outputs.F_ONLY_FIRST1 }}
           F_BUY_IN_TOP3:    ${{ steps.parse.outputs.F_BUY_IN_TOP3 }}
           F_BUY_THR:        ${{ steps.parse.outputs.F_BUY_THR }}
+          # keyman
           K_ENABLE: ${{ steps.parse.outputs.K_ENABLE }}
           K_THR:    ${{ steps.parse.outputs.K_THR }}
           K_BOOST:  ${{ steps.parse.outputs.K_BOOST }}
           K_AGGR:   ${{ steps.parse.outputs.K_AGGR }}
         run: |
           set -euo pipefail
-          cat > agg_overall.py <<'PY'
-import os, json, glob, math
+          CSV="$OUTDIR/pass2/per_race_results.csv"
+          [ -f "$CSV" ] || { echo "per_race_results.csv not found: $CSV"; exit 1; }
 
-def norm_race(r):
-  r = str(r or '').strip().upper()
-  return r if not r or r.endswith('R') else f'{r}R'
+          RACES=$(awk 'END{print NR-1}' "$CSV")
+          BETS=$(awk -F, 'NR>1{sum+=$4}END{print sum+0}' "$CSV")
+          STAKE=$(awk -v u="$UNIT" 'BEGIN{FS=","} NR>1{sum+=u*$4} END{print sum+0}' "$CSV")
+          PAYOUT=$(awk -F, 'NR>1{sum+=$6}END{print sum+0}' "$CSV")
+          HITS=$(awk -F, 'NR>1{sum+=$5}END{print sum+0}' "$CSV")
+          HIT_RATE=$(awk -v h="$HITS" -v r="$RACES" 'BEGIN{if(r==0)print 0; else printf "%.12f", h/r}')
+          ROI=$(awk -v p="$PAYOUT" -v s="$STAKE" 'BEGIN{if(s==0)print 0; else printf "%.12f", (p-s)/s}')
 
-def read_json(p):
-  try:
-    with open(p, 'r', encoding='utf-8') as f:
-      return json.load(f)
-  except:
-    return {}
+          # bool 正規化
+          tf(){ v="${1:-false}"; v="$(echo "$v" | tr '[:upper:]' '[:lower:]')"; [ "$v" = "true" ] && echo true || echo false; }
+          REQ_ODDS=$(tf "$F_REQUIRE_ODDS")
+          EXC1=$(tf "$F_EXCLUDE_FIRST1")
+          ONLY1=$(tf "$F_ONLY_FIRST1")
+          BUY3=$(tf "$F_BUY_IN_TOP3")
+          KM_EN=$(tf "$K_ENABLE")
 
-def actual_trifecta_and_amount(res_json):
-  trif = (res_json or {}).get('payouts',{}).get('trifecta')
-  combo, amt = None, 0
-  if isinstance(trif, dict):
-    combo = str(trif.get('combo') or '').strip() or None
-    try: amt = int(trif.get('amount') or 0)
-    except: amt = 0
-  if not combo and isinstance(res_json, dict):
-    order = res_json.get('order')
-    if isinstance(order, list) and len(order) >= 3:
-      def lane(x): return str(x.get('lane') or x.get('course') or x.get('F') or x.get('number'))
-      try:
-        f,s,t = lane(order[0]), lane(order[1]), lane(order[2])
-        if all([f,s,t]): combo = f'{f}-{s}-{t}'
-      except: pass
-  return combo, amt
-
-base = os.environ['OUTDIR']
-pred_dir = os.path.join(base, 'pass2', 'predict')
-unit = int(os.environ.get('UNIT','100'))
-mode = os.environ.get('MODE','predict')
-date = os.environ.get('DATE','')
-
-opts = {
-  'sims': int(os.environ.get('SIMS','0') or 0),
-  'topn': int(os.environ.get('TOPN','0') or 0),
-  'filters': {
-    'require_odds': os.environ.get('F_REQUIRE_ODDS','false').lower()=='true',
-    'min_ev': float(os.environ.get('F_MIN_EV','0') or 0),
-    'odds_bands': os.environ.get('F_ODDS_BANDS',''),
-    'odds_min': float(os.environ.get('F_ODDS_MIN','0') or 0),
-    'odds_max': float(os.environ.get('F_ODDS_MAX','0') or 0),
-    'exclude_first1': os.environ.get('F_EXCLUDE_FIRST1','false').lower()=='true',
-    'only_first1'   : os.environ.get('F_ONLY_FIRST1','false').lower()=='true',
-    'buy_in_top3'   : os.environ.get('F_BUY_IN_TOP3','false').lower()=='true',
-    'buy_thr'       : float(os.environ.get('F_BUY_THR','0.7') or 0.7),
-  },
-  'keyman': {
-    'enable'   : os.environ.get('K_ENABLE','true').lower()=='true',
-    'threshold': float(os.environ.get('K_THR','0.7') or 0.7),
-    'boost'    : float(os.environ.get('K_BOOST','0.15') or 0.15),
-    'aggr'     : float(os.environ.get('K_AGGR','0.0') or 0.0),
-  }
-}
-
-races = 0
-bets_total = 0
-hits = 0
-payout_total = 0
-stake_total = 0
-
-pred_files = sorted(glob.glob(os.path.join(pred_dir, 'pred_*.json')))
-for p in pred_files:
-  d = read_json(p)
-  races += 1
-  buylist = d.get('buylist', [])
-  bets_total += len(buylist)
-  stake_total += unit * len(buylist)
-
-  if mode == 'eval':
-    date = d.get('date', date)
-    pid  = str(d.get('pid',''))
-    race = norm_race(d.get('race',''))
-    # results: public/results/v1/<date>/<pid>/<race>.json
-    res_path = os.path.join('public','results','v1', date, pid, f'{race}.json')
-    res = read_json(res_path) if os.path.isfile(res_path) else {}
-    hit_combo, pay = actual_trifecta_and_amount(res)
-    if hit_combo:
-      # check if any ticket equals hit_combo
-      if any(str(t.get('ticket')) == hit_combo for t in buylist):
-        hits += 1
-        payout_total += int(pay or 0)
-
-hit_rate = (hits / races) if races else 0.0
-roi = ((payout_total - stake_total) / stake_total) if stake_total else 0.0
-
-overall = {
-  'date': date,
-  'mode': mode,
-  'races': races,
-  'bets_total': bets_total,
-  'unit': unit,
-  'stake_total': stake_total,
-  'hits': hits,
-  'hit_rate': hit_rate,
-  'payout_total': payout_total,
-  'roi': roi,
-  'options': opts
-}
-
-out_dir = os.path.join(base, 'pass2')
-os.makedirs(out_dir, exist_ok=True)
-out_path = os.path.join(out_dir, 'overall.json')  # 常に上書き
-with open(out_path, 'w', encoding='utf-8') as f:
-  json.dump(overall, f, ensure_ascii=False, indent=2)
-
-print(f"[overall] races={races} bets={bets_total} hits={hits} roi={roi:.6f} -> {out_path}")
-PY
-          python agg_overall.py
+          mkdir -p "$OUTDIR/pass2"
+          jq -n \
+            --arg date "$DATE" --arg mode "$MODE" --arg pid "$PID" \
+            --argjson unit $UNIT --argjson sims $SIMS --argjson topn $TOPN \
+            --argjson races $RACES --argjson bets $BETS \
+            --argjson stake $STAKE --argjson hits $HITS \
+            --argjson hit_rate $HIT_RATE --argjson payout $PAYOUT --argjson roi $ROI \
+            --argjson f_require_odds $REQ_ODDS --arg f_odds_bands "${F_ODDS_BANDS:-}" \
+            --argjson f_min_ev ${F_MIN_EV:-0} --argjson f_odds_min ${F_ODDS_MIN:-0} --argjson f_odds_max ${F_ODDS_MAX:-0} \
+            --argjson f_exclude_first1 $EXC1 --argjson f_only_first1 $ONLY1 \
+            --argjson f_buy_in_top3 $BUY3 --argjson f_buy_thr ${F_BUY_THR:-0} \
+            --argjson k_enable $KM_EN --argjson k_thr ${K_THR:-0} --argjson k_boost ${K_BOOST:-0} --argjson k_aggr ${K_AGGR:-0} \
+            '{
+              date: $date, mode: $mode, pid: $pid,
+              races: $races, bets_total: $bets, unit: $unit,
+              stake_total: $stake, hits: $hits, hit_rate: $hit_rate,
+              payout_total: $payout, roi: $roi,
+              options: {
+                sims: $sims, topn: $topn,
+                filters: {
+                  require_odds: $f_require_odds,
+                  min_ev: $f_min_ev,
+                  odds_bands: $f_odds_bands,
+                  odds_min: $f_odds_min, odds_max: $f_odds_max,
+                  exclude_first1: $f_exclude_first1,
+                  only_first1: $f_only_first1,
+                  buy_in_top3: $f_buy_in_top3,
+                  buy_thr: $f_buy_thr
+                },
+                keyman: {
+                  enable: $k_enable, threshold: $k_thr,
+                  boost: $k_boost, aggr: $k_aggr
+                }
+              }
+            }' > "$OUTDIR/pass2/overall.json"
+          echo "[overall] wrote $OUTDIR/pass2/overall.json"
 
       - name: Commit results into repo
         if: always()
@@ -325,7 +286,7 @@ PY
           git config user.name  github-actions
           git config user.email github-actions@github.com
           git add ${{ inputs.OUTDIR }}/pass1 ${{ inputs.OUTDIR }}/pass2 TENKAI/predictions/v1/${{ inputs.DATE }} || true
-          git commit -m "sims_integrated: ${{ inputs.MODE }} DATE=${{ inputs.DATE }} PID=${{ inputs.PID }} (agg overwrite overall.json)" || echo "nothing to commit"
+          git commit -m "sims_integrated: ${{ inputs.MODE }} DATE=${{ inputs.DATE }} PID=${{ inputs.PID }}" || echo "nothing to commit"
           git push || true
 
       - name: Upload artifacts
